# smartquiz

./: .editorconfig  .env.example  .gitattributes  .gitignore  AI_FIX_ROADMAP.md  CHANGELOG.md  DEVELOPMENT_GUIDE.md  Dockerfile  LICENSE  README.md  RESOURCE_REFACTORING_GUIDE.md  ROADMAP.md  SETUP_GUIDE.md  build-docker.bat  build-local.bat  build-native.bat  build-native.sh  build.gradle  build_android.sh  build_apk.bat  build_apk.ps1  build_apk_final.bat  build_apk_simple.bat  build_release_with_native.bat  build_snapdragon.bat  gradle.properties  gradlew.bat  item_thinking_message.xml  item_user_message.xml  proguard-poi-rules.pro  proguard-rules.pro  settings.gradle  修改步骤文档.md  城市映射表.txt  城市映射表_扩展版.txt  目录结构检查报告.md  目录结构检查报告（最终版）.md  目录结构检查报告（详细）.md
docs/: AGENT_ARCHITECTURE.md  README.md  ai_rules.md
docs/database/: database_structure.md
docs/development/: AGENT_OPTIMIZATION_REPORT.md  TBS_SDK_INTEGRATION_GUIDE.md  ai_feature_design.md  ai_ui_interaction_design.md  android_adaptation.md  comprehensive_analysis_report.md  development_standards.md  enhanced_local_library_design.md  excel_import_feature.md  local_library_inference_engine_design.md  module_function_design.md  project_redesign_summary.md  tech_stack.md  testing_strategy.md  ui_resources_design.md  ui_ux_redesign.md  user_stories.md  应用重构设计文档.md
docs/development/ai_modules/: ai_service_design.md  learning_assistant_design.md  llm_service_design.md  model_manager_design.md  question_analyzer_design.md  question_generator_design.md  translator_design.md
docs/system/: api_design.md  deployment_guide.md  system_architecture.md
src/main/: AndroidManifest.xml
src/main/assets/: QUICKSTART.md  app2.html  download_resources.bat  download_resources.py  index.html  models_presets.json
src/main/assets/images/: README.md
src/main/assets/models/: DOWNLOAD_GUIDE_CN.md  README.md  all-MiniLM-L6-v2_vocab.txt  config.json
src/main/assets/pages/: README.md  ai-chat.html  anki-inspiration.html  backup.html  batch-operations.html  environment.html  export.html  file-preview.html  history.html  import.html  index.html  language.html  login.html  note.html  ocr.html  question.html  quiz.html  register.html  statistics.html  study-plan.html  template-manager.html  test-navigation.html  test.html  theme.html  user.html  wrong-question.html
src/main/assets/templates/: cheat_sheet.json  csv_template.json  dark_mode_template.json  enhanced_html_template.json  excel_template.json  json_template.json  lecture_notes.json  long_image_dark_tech.json  long_image_modern_card.json  long_image_study_notes.json  long_image_template.json  markdown_template.json  memory_cards.json  minimal_clean_template.json  modern_tech_template.json  pdf_exam_style.json  pdf_modern_simple.json  pdf_template.json  print_material.json  reading_material.json  recitation.json  word_elegant_simple.json  word_modern_business.json  word_template.json
src/main/cpp/: CMakeLists.txt  agent_inference.cpp  agent_inference.h  agent_inference_jni.cpp  agent_inference_optimizations.cpp  agent_inference_patch.cpp  build_arm64_full.sh  build_arm64_incremental.sh  build_arm64_nocoopmat.sh  build_arm64_run.sh  build_llama_jni.bat  build_llama_jni_msys2.sh  build_native.sh  build_x86_64.sh  build_x86_64_resume.sh  build_x86_64_run.sh  llama-bridge.cpp  native-lib.cpp  verify_vulkan_config.sh
src/main/res/anim/: weather_icon_anim.xml
src/main/res/animator/: button_state_list_animator.xml
src/main/res/drawable/: agent_action_background.xml  agent_observation_background.xml  agent_reflection_background.xml  agent_step_background.xml  agent_thinking_background.xml  ai_message_background.xml  alert_card_background.xml  aqi_circle.xml  aqi_circle_good.xml  bg_background_color.xml  bg_card_background.xml  bg_progress_bar.xml  bg_spinner.xml  btn_circle_background.xml  btn_delete_background.xml  btn_gradient_primary.xml  btn_gradient_secondary.xml  btn_outline_primary.xml  button_outline_background.xml  circle_indicator_green.xml  circle_indicator_orange.xml  circle_indicator_red.xml  edittext_background.xml  edittext_background_selector.xml  error_message_background.xml  gradient_primary.xml  ic_ai_chat.xml  ic_alert.xml  ic_analyze.xml  ic_attach.xml  ic_back.xml  ic_backup.xml  ic_bank.xml  ic_check.xml  ic_check_double.xml  ic_chevron_right.xml  ic_clear.xml  ic_close_bg.xml  ic_delete.xml  ic_error.xml  (+64 more)
src/main/res/layout/: activity_about.xml  activity_agent_chat.xml  activity_ai_center.xml  activity_ai_chat.xml  activity_ai_learning_assistant.xml  activity_ai_model_download.xml  activity_ai_model_manager.xml  activity_ai_service_status.xml  activity_api_config.xml  activity_backup.xml  activity_chat.xml  activity_data_issue_fix.xml  activity_database_detail.xml  activity_database_management.xml  activity_device_info.xml  activity_edit_template.xml  activity_environment_check.xml  activity_export.xml  activity_export_execution.xml  activity_export_format_selection.xml  activity_export_history.xml  activity_export_progress.xml  activity_export_settings.xml  activity_feedback.xml  activity_field_config.xml  activity_field_management.xml  activity_file_preview.xml  activity_file_render.xml  activity_forgot_password.xml  activity_history.xml  activity_import.xml  activity_import_guide.xml  activity_import_new.xml  activity_import_result.xml  activity_language.xml  activity_learning_assistant.xml  activity_log_viewer.xml  activity_login.xml  activity_logs.xml  activity_main.xml  (+137 more)
src/main/res/layout-land/: activity_quiz_challenge.xml  activity_quiz_exam.xml  activity_quiz_new.xml  activity_quiz_practice.xml  activity_quiz_recite.xml
src/main/res/menu/: bottom_navigation_menu.xml  chat_history_menu.xml  history_menu.xml  logs_menu.xml  menu_file_preview.xml  popup_history_item.xml  question_bank_menu.xml  question_browse_menu.xml  quiz_menu.xml  template_manager_menu.xml
src/main/res/raw/: template.xlsx
src/main/res/values-en/: strings.xml
src/main/res/values-night/: colors.xml  styles.xml
src/main/res/values-sw600dp/: dimens.xml
(+467 files in other folders)
